--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>VrRobot</title>
+  <title>人机协作挑战赛</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <h1 class="text-center display-3 mb-5 mt-5" style="font-weight: bold;color: #df5211">人机协作挑战赛</h1>
   <app-root></app-root>
 </body>
 </html>
